_infrastructure/warpgate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warpgate
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: warpgate
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: warpgate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: warpgate
    spec:
      containers:
        - name: warpgate
          image: ghcr.io/warp-tech/warpgate:0.29.2
          ports:
            - containerPort: 22
              name: ssh
            - containerPort: 443
              name: https
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: warpgate-data
        - name: config
          secret:
            secretName: warpgate
