_infrastructure/warpgate/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: warpgate-lb
  annotations:
    metallb.universe.tf/allow-shared-ip: ipv4s-are-expensive
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: warpgate
  ports:
    - port: 2222
      name: ssh
      targetPort: ssh
