_infrastructure/warpgate/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: warpgate
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: kube-system-insecure@kubernetescrd
spec:
  selector:
    app.kubernetes.io/name: warpgate
  ports:
    - port: 22
      name: ssh
      targetPort: ssh
    - port: 443
      name: https
      targetPort: https
    - port: 3306
      name: mysql
      targetPort: mysql
